# tomlandMaps

./: .gitignore  cabal.project.freeze  flake.nix  tests.toml  tomlandMaps.cabal
.github/workflows/: nix.yml
data/map1/: a.toml  b.toml
data/map2/: a.toml  b.toml
data/map3/: a.toml  b.toml  c.toml
src/: Main.hs  Map1.hs  Map2.hs  Map3.hs
