cabal-version: 3.0
name:          tomlandMaps
version:       0.1.0.0
synopsis:      Tomland Testing
description:   Testing parsing certain shapes of TOML (in particular maps) with tomland
category:      TOML
license:       Unlicense
license-file:  LICENSE
homepage:      https://github.com/pnotequalnp/tomlandMaps
bug-reports:   https://github.com/pnotequalnp/tomlandMaps/issues
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     None

source-repository head
  type:     git
  location: https://github.com/pnotequalnp/tomlandMaps

executable tomlandMaps
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  other-modules:
    Map1
    Map2
    Map3

  ghc-options:
    -Wall -Wcompat -Werror=incomplete-patterns
    -fno-show-valid-hole-fits -Wno-unticked-promoted-constructors

  default-extensions:
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    TypeApplications

  build-depends:
    , base         >=4.14.1.0 && <5.0
    , containers   ^>=0.6.5
    , tasty        ^>=1.4.2
    , tasty-hunit  ^>=0.10.0
    , text         ^>=1.2.4
    , tomland      ^>=1.3.2
